attempt to fix screen resizing on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,6 @@
 body {
+    height:100%;
+    position: fixed;
     background-color: black;
     margin: 0;
     overflow: hidden; /* Hide scrollbars */
